Changelog 2715 --> 2774

Features/Changes:
[Chapter]              all MediaInfo supported files and TXT/XML files can be used as chapter files. The muxers will use chapter information from the input video file if available.
                       !!! existing jobs created by older MeGUI builds have to be recreated as otherwise the chapter information is not available !!!
[HD Streams Extractor] added settings menu:
                       - added settings to include the encoding and/or all demuxer "extract as" options. AAC encoding is only available if neroaacenc.exe is found in the eac3to directory.
                       - moved the language track selection option from the global settings into the new menu
                       - added option to select by default the (non-)HD tracks (defaults to non-HD)
					   removed the DTSHD "extract as" option and added the DTS_CORE option
[OneClick]             removed the "Anamorph Output" option from the OneClick profile. Please use the anamorphic encoding options in the AviSynth profile instead.
                       added aspect ratio selection to the OneClick profile
[Main]                 if not at least AviSynth 2.6 is installed the portable build will be used
[Muxer]                added/improved aspect ratio writing (all muxers except the AVI muxer). Therefore the aspect ratio of the video track will be used if not forced by other tools (e.g. OneClick).

Enhancements/Fixes:
[FFMS Indexer]         enabled AVI file handling
[HD Streams Extractor] added detection of "core/embedded" tracks and support for HEVC video tracks
[Muxer]                removed dtshd and dtsma file extension and added eac3, h265 and thd+ac3 file extension where suitable
[OneClick]             improved handling of audio tracks:
                       - fixed demux of multiple audio tracks using the same input track (eac3to only)
                       - fixed handling of TrueHD+AC3 tracks if using an intermediate MKV file